apps/omnitools/k8s.tools.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: omnitools
  labels:
    goldilocks.fairwinds.com/enabled: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omnitools
  namespace: omnitools
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: omnitools
  template:
    metadata:
      labels:
        app.kubernetes.io/name: omnitools
    spec:
      serviceAccount: omnitools
      containers:
        - name: omnitools
          # https://github.com/iib0011/omni-tools
          # https://hub.docker.com/r/iib0011/omni-tools
          image: iib0011/omni-tools:0.6.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: omnitools
  namespace: omnitools
  labels:
    app.kubernetes.io/name: omnitools
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
      targetPort: 80
  selector:
    app.kubernetes.io/name: omnitools
