apps/omnitools/k8s.np.omnitools.yaml
---
# Omnitools Network Policy
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: omnitools
  namespace: omnitools
  annotations:
    argocd.argoproj.io/sync-wave: "16"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: omnitools
  ingress:
  # Allow ingress from Traefik
  - fromEndpoints:
    - matchLabels:
        k8s:app.kubernetes.io/instance: traefik-kube-system
        k8s:io.kubernetes.pod.namespace: kube-system
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
  egress:
  # Allow DNS resolution via CoreDNS
  - toEndpoints:
    - matchLabels:
        k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: kube-system
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
